[project]
name = "dextra-storm"
version = "0.1.0"
description = "dextra's fork of storm"
authors = [
    {name = "barna.szocs@dextra.dev"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "dspy-ai (==2.4.9)",
    "wikipedia (==1.4.0)",
    "sentence-transformers (>=3.3.1,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "langchain-text-splitters (>=0.3.5,<0.4.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "qdrant-client (>=1.12.2,<2.0.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)",
    "numpy (==1.26.4)",
    "lxml-html-clean (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
